; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_conditional.c_bool_isvalid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/security/selinux/ss/extr_conditional.c_bool_isvalid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cond_bool_datum = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cond_bool_datum*)* @bool_isvalid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bool_isvalid(%struct.cond_bool_datum* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cond_bool_datum*, align 8
  store %struct.cond_bool_datum* %0, %struct.cond_bool_datum** %3, align 8
  %4 = load %struct.cond_bool_datum*, %struct.cond_bool_datum** %3, align 8
  %5 = getelementptr inbounds %struct.cond_bool_datum, %struct.cond_bool_datum* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %14, label %8

8:                                                ; preds = %1
  %9 = load %struct.cond_bool_datum*, %struct.cond_bool_datum** %3, align 8
  %10 = getelementptr inbounds %struct.cond_bool_datum, %struct.cond_bool_datum* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp eq i32 %11, 1
  br i1 %12, label %14, label %13

13:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %15

14:                                               ; preds = %8, %1
  store i32 1, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %13
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
